--- a/flask-angular-boilerplate/frontend/views/defaultBrand.html
+++ b/flask-angular-boilerplate/frontend/views/defaultBrand.html
@@ -9,7 +9,7 @@
             <h5 class="card-title">{{ brand.brandName }}</h5>
             <a ng-click="deleteBrand(brand.brandId)" class="card-link text-danger hover">Delete</a>
             <a ng-click="modifyBrand(brand.brandId)" class="card-link text-info hover">Modify</a>
-            <a ng-click="previewNote(brand.brandId)" class="card-link text-primary hover">Preview</a>
+            <a ng-click="previewBrand(brand.brandId)" class="card-link text-primary hover">Preview</a>
         </div>
     </div>
 </div>
