--- a/flask-angular-boilerplate/frontend/views/models_form.html
+++ b/flask-angular-boilerplate/frontend/views/models_form.html
@@ -1,7 +1,7 @@
 <form ng-init="init()">
     <div class="form-group">
         <label for="exampleInputPassword1">Model</label>
-        <textarea class="form-control" placeholder="Enter description" ng-model="models.modelName"></textarea>
+        <textarea class="form-control" placeholder="Enter model" ng-model="models.modelName"></textarea>
     </div>
     <button ng-click="submit()" type="submit" class="btn btn-primary">Submit</button>
     <a style="margin-left: 20px" ng-click="goBack(models)" class="card-link text-primary hover">Go back</a>
