--- a/flask-angular-boilerplate/frontend/views/defaultBrand.html
+++ b/flask-angular-boilerplate/frontend/views/defaultBrand.html
@@ -1,6 +1,6 @@
 <div ng-init="init()">
     <input class="form-control" ng-model="filterText" ng-change='filter()'
-        placeholder="Search for specific note" style="margin-bottom: 5px" />
+        placeholder="Search for specific brand" style="margin-bottom: 5px" />
     <button ng-click="createBrand()" type="button" class="btn btn-secondary" style="margin-bottom: 15px">Add new
         brand</button>
     <div ng-repeat="note in notes track by $index" class="card bg-dark text-white"
