--- a/flask-angular-boilerplate/frontend/views/fuel_form.html
+++ b/flask-angular-boilerplate/frontend/views/fuel_form.html
@@ -1,10 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+<form ng-init="init()">
+    <div class="form-group">
+        <label for="exampleInputPassword1">Fuel</label>
+        <textarea class="form-control" placeholder="Enter fuel" ng-model="fuel.fuel"></textarea>
+    </div>
+    <button ng-click="submit()" type="submit" class="btn btn-primary">Submit</button>
+    <a style="margin-left: 20px" ng-click="goBack(fuel)" class="card-link text-primary hover">Go back</a>
+    <a ng-if="isEdit" ng-click="deleteFuel(fuel.fuelId)" class="card-link text-danger hover">Delete</a>
+</form>
