--- a/flask-angular-boilerplate/frontend/views/car_form.html
+++ b/flask-angular-boilerplate/frontend/views/car_form.html
@@ -1,12 +1,19 @@
 <form ng-init="init()">
     <div class="form-group">
         <label for="exampleInputPassword1">Brand</label>
-        <select class="form-control"  ng-model="car.brandId"></select>
+        <select class="form-control" ng-model="brand.brandId">
+            <option value="fuel.fuelId" ng-reepat="brandName in brandOptions">{{ brand.brandName }}</option>
+        </select>
         <label for="exampleInputPassword1">Model</label>
-        <select class="form-control"  ng-model="car.modelId"></select>
+        <select class="form-control" ng-model="car.modelsId">
+            <option value="fuel.fuelId" ng-reepat="modelName in modelsOptions">{{ models.modelName }}</option>
+        </select>
         <input class="form-control" placeholder="Enter year" ng-model="car.year"></input>
         <input class="form-control" placeholder="Enter price" ng-model="car.price"></input>
-        <input class="form-control" placeholder="Enter fuel" ng-model="car.fuel"></input>
+        <label for="exampleInputPassword1">Fuel</label>
+        <select class="form-control" ng-model="car.fuelId">
+            <option value="fuel.fuelId" ng-reepat="fuel in fuelOptions">{{ fuel.fuel }}</option>
+        </select>
         <input class="form-control" placeholder="Enter register number" ng-model="car.reg"></input>
         <input class="form-control" placeholder="Enter color" ng-model="car.color"></input>
         <input class="form-control" placeholder="Enter kilometers" ng-model="car.km"></input>
