--- a/flask-angular-boilerplate/frontend/views/defaultCar.html
+++ b/flask-angular-boilerplate/frontend/views/defaultCar.html
@@ -6,7 +6,7 @@
     <div ng-repeat="note in notes track by $index" class="card bg-dark text-white"
         style="width: 100%; margin-bottom: 10px">
         <div class="card-body">
-            <h5 class="card-title">{{ car.brandId,car.modelId }}</h5>
+            <h5 class="card-title">{{ car.brandId,car.modelsId }}</h5>
             <a ng-click="deleteCar(car.carId)" class="card-link text-danger hover">Delete</a>
             <a ng-click="modifyCar(car.carId)" class="card-link text-info hover">Modify</a>
             <a ng-click="previewCar(car.carId)" class="card-link text-primary hover">Preview</a>
