--- a/flask-angular-boilerplate/frontend/views/defaultCar.html
+++ b/flask-angular-boilerplate/frontend/views/defaultCar.html
@@ -1,12 +1,12 @@
 <div ng-init="init()">
     <input class="form-control" ng-model="filterText" ng-change='filter()'
         placeholder="Search for specific car" style="margin-bottom: 5px" />
-    <button ng-click="createBrand()" type="button" class="btn btn-secondary" style="margin-bottom: 15px">Add new
+    <button ng-click="createCar()" type="button" class="btn btn-secondary" style="margin-bottom: 15px">Add new
         car</button>
-    <div ng-repeat="note in notes track by $index" class="card bg-dark text-white"
+    <div ng-repeat="car in car track by $index" class="card bg-dark text-white"
         style="width: 100%; margin-bottom: 10px">
         <div class="card-body">
-            <h5 class="card-title">{{ car.brandId,car.modelsId }}</h5>
+            <h5 class="card-title">{{ car.carId}}</h5>
             <a ng-click="deleteCar(car.carId)" class="card-link text-danger hover">Delete</a>
             <a ng-click="modifyCar(car.carId)" class="card-link text-info hover">Modify</a>
             <a ng-click="previewCar(car.carId)" class="card-link text-primary hover">Preview</a>
