--- a/flask-angular-boilerplate/frontend/views/car_form.html
+++ b/flask-angular-boilerplate/frontend/views/car_form.html
@@ -2,7 +2,7 @@
     <div class="form-group">
         <label for="exampleInputPassword1">Brand</label>
         <select class="form-control" ng-model="brand.brandId">
-            <option value="fuel.fuelId" ng-reepat="brandName in brandOptions">{{ brand.brandName }}</option>
+            <option value="brand.brandId" ng-reepat="brandName in brandOptions">{{ brand.brandName }}</option>
         </select>
         <label for="exampleInputPassword1">Model</label>
         <select class="form-control" ng-model="car.modelsId">
