--- a/flask-angular-boilerplate/frontend/views/defaultBrand.html
+++ b/flask-angular-boilerplate/frontend/views/defaultBrand.html
@@ -3,7 +3,7 @@
         placeholder="Search for specific brand" style="margin-bottom: 5px" />
     <button ng-click="createBrand()" type="button" class="btn btn-secondary" style="margin-bottom: 15px">Add new
         brand</button>
-    <div ng-repeat="note in notes track by $index" class="card bg-dark text-white"
+    <div ng-repeat="brand in brand track by $index" class="card bg-dark text-white"
         style="width: 100%; margin-bottom: 10px">
         <div class="card-body">
             <h5 class="card-title">{{ brand.brandName }}</h5>
