--- a/flask-angular-boilerplate/frontend/views/models_preview.html
+++ b/flask-angular-boilerplate/frontend/views/models_preview.html
@@ -1,6 +1,6 @@
 <div ng-init="init()" class="card card bg-dark text-white">
     <img class="card-img-top"
-        src="https://vistapointe.net/images/ribblehead-viaduct-wallpaper-7.jpg">
+        src="https://image-cdn.beforward.jp/files/pictures/201309/154664/BF159828_1.jpg">
     <div class="card-body preview-card">
         <h5 class="card-title">{{ models.modelsId }}</h5>
         <p class="card-text">{{ models.modelName }}</p>
