--- a/flask-angular-boilerplate/frontend/views/brand_form.html
+++ b/flask-angular-boilerplate/frontend/views/brand_form.html
@@ -5,5 +5,5 @@
     </div>
     <button ng-click="submit()" type="submit" class="btn btn-primary">Submit</button>
     <a style="margin-left: 20px" ng-click="goBack(brand)" class="card-link text-primary hover">Go back</a>
-    <a ng-if="isEdit" ng-click="deleteBrand(brand.brandID)" class="card-link text-danger hover">Delete</a>
+    <a ng-if="isEdit" ng-click="deleteBrand(brand.brandId)" class="card-link text-danger hover">Delete</a>
 </form>
