--- a/flask-angular-boilerplate/frontend/views/defaultModels.html
+++ b/flask-angular-boilerplate/frontend/views/defaultModels.html
@@ -1,7 +1,7 @@
 <div ng-init="init()">
     <input class="form-control" ng-model="filterText" ng-change='filter()'
         placeholder="Search for specific model" style="margin-bottom: 5px" />
-    <button ng-click="createBrand()" type="button" class="btn btn-secondary" style="margin-bottom: 15px">Add new
+    <button ng-click="createModels()" type="button" class="btn btn-secondary" style="margin-bottom: 15px">Add new
         model</button>
     <div ng-repeat="note in notes track by $index" class="card bg-dark text-white"
         style="width: 100%; margin-bottom: 10px">
