--- a/flask-angular-boilerplate/frontend/views/user_login.html
+++ b/flask-angular-boilerplate/frontend/views/user_login.html
@@ -1,16 +1,16 @@
 <form action="action_page.php" method="post">
-  <div class="imgcontainer">
+  <!--<div class="imgcontainer">
     <img src="img_avatar2.png" alt="Avatar" class="avatar">
-  </div>
+  </div>-->
 
   <div class="container">
     <label for="uname"><b>Username</b></label>
-    <input type="text" placeholder="Enter Username" name="uname" required>
+    <input type="text" placeholder="Enter Username" name="uname" ng-model="user.name" required>
 
     <label for="psw"><b>Password</b></label>
-    <input type="password" placeholder="Enter Password" name="psw" required>
+    <input type="password" placeholder="Enter Password" name="psw" ng-model="user.password" required>
 
-    <button type="submit">Login</button>
+    <button type="submit" ng-click="home()">Login</button>
     <label>
       <input type="checkbox" checked="checked" name="remember"> Remember me
     </label>
