--- a/flask-angular-boilerplate/frontend/views/user_register.html
+++ b/flask-angular-boilerplate/frontend/views/user_register.html
@@ -9,9 +9,9 @@
     <input class="form-control" placeholder="Enter username" ng-model="user.name" required>
 
     <label for="psw"><b>Password</b></label>
-    <input class="form-control" placeholder="Enter password" ng-model="user.password" required>
+    <input class="form-control" type="password" placeholder="Enter password" ng-model="user.password" required>
 
-    <label for="psw-repeat"><b>Repeat Password</b></label>
+    <label for="psw-repeat" type="password"><b>Repeat Password</b></label>
     <input class="form-control" placeholder="Enter password" ng-model="user.password_confirm" required>
     <hr>
     <p>By creating an account you agree to our <a href="#">Terms & Privacy</a>.</p>
