--- a/flask-angular-boilerplate/frontend/views/user_login.html
+++ b/flask-angular-boilerplate/frontend/views/user_login.html
@@ -1,4 +1,4 @@
-<form action="action_page.php" method="post">
+<form action="/#/api/user/login" method="post">
   <!--<div class="imgcontainer">
     <img src="img_avatar2.png" alt="Avatar" class="avatar">
   </div>-->
@@ -10,14 +10,14 @@
     <label for="psw"><b>Password</b></label>
     <input type="password" placeholder="Enter Password" name="psw" ng-model="user.password" required>
 
-    <button type="submit" ng-click="home()">Login</button>
+    <button type="submit" ng-click="submit()">Login</button>
     <label>
       <input type="checkbox" checked="checked" name="remember"> Remember me
     </label>
   </div>
 
   <div class="container" style="background-color:#f1f1f1">
-    <button type="button" class="cancelbtn">Cancel</button>
+    <button type="button" class="cancelbtn" ng-click="home()">Cancel</button>
     <span class="psw">Forgot <a href="/#/forgot">password?</a></span>
   </div>
 </form>
