--- a/flask-angular-boilerplate/frontend/views/user_login.html
+++ b/flask-angular-boilerplate/frontend/views/user_login.html
@@ -1,4 +1,4 @@
-<form action="/#/api/user/login" method="post">
+<form>
   <!--<div class="imgcontainer">
     <img src="img_avatar2.png" alt="Avatar" class="avatar">
   </div>-->
