--- a/flask-angular-boilerplate/frontend/views/user_login.html
+++ b/flask-angular-boilerplate/frontend/views/user_login.html
@@ -1,14 +1,14 @@
 <form>
-  <!--<div class="imgcontainer">
-    <img src="img_avatar2.png" alt="Avatar" class="avatar">
-  </div>-->
 
   <div class="container">
-    <label for="uname"><b>Username</b></label>
+    <label for="uname" ><b>Username</b></label>
     <input type="text" placeholder="Enter Username" name="uname" ng-model="user.name" required>
 
     <label for="psw"><b>Password</b></label>
     <input type="password" placeholder="Enter Password" name="psw" ng-model="user.password" required>
+
+    <h1 ng-if="name != '' || paassword != '' ">{{user.name}} is logged in!</h1>
+    <h1 ng-if="name == '' || paassword == '' ">You haven't typed your name or password in yet!</h1>
 
     <button type="submit" ng-click="submit()">Login</button>
     <label>
@@ -21,3 +21,6 @@
     <span class="psw">Forgot <a href="/#/forgot">password?</a></span>
   </div>
 </form>
+
+
+
